re-create test project using framework 4.7.2